fixed spacing issues and alignment in responsive

--- a/style.css
+++ b/style.css
@@ -120,12 +120,21 @@ html{
 
 @media screen and (max-width: 850px){
   div.workBlock{
-  flex-direction: column;}
+  flex-direction: column;
+  padding: 2.5%
+  }
   div.workBlock .image{
     width: 80%;
     height: 80%;
     margin-left: auto;
     margin-right: auto;
+  }
+  div.workBlock a{
+    justify-content: center;
+  }
+  div.workBlock .workText{
+    padding-bottom: 7%;
+    text-align: center;
   }
 }
 
@@ -187,8 +196,8 @@ html{
 }
 .footer p{
   padding-left: 70px;
-  font-weight: lighter;
   font-size: 20px;
+  letter-spacing: 0.2em;
 }
 
 .socials{
